--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button class="lang-btn" data-lang="de">DE</button>
                 </div>
                 <button class="theme-toggle" id="themeToggle">
-                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-moon" aria-hidden="true"></i>
                 </button>
             </div>
         </div>
